# python-project-tools

./: .gitignore  README.md  _config.py  config.py  pyproject.toml
mn5/slurm/: readme.md  run.slurm  test.slurm
tests/: test_bag.py  test_registry.py  test_xml2yaml.py
tools/: class_registry.py  create_db.py  data-logger.py  data_folder.py  data_share.py  docs_refs.py  env_root.py  fast_levenhstein.py  files.py  linked-logging.py  local_bags.py  mkdir.py  move.py  project_logging.py  pydantic_annotated_types.py  typer_log.py  write_csvs.py  xml2yaml.py
tools/experiment/: inner_bag.py
