[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-tools"
version = "0.12"
description = "python project tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.3",
    "pydantic-settings>=2.9.1",
    "orjson>=3.10.16",
    "pyyaml>=6.0.2",
    "levenshtein>=0.27.1",
    "humanize>=4.13.0",
]

[tool.setuptools]
packages = ["tools"]

#[tool.uv.sources]
#python-project-tools = { workspace = true }

[project.optional-dependencies]
database = [
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "jsonschema>=4.23.0",
]

bags = [
    "appdirs>=1.4.4",
    "bagit>=1.8.1",
]

excel = [
    "openpyxl>=3.1.5",
]
xml2yaml = [
    "xmltodict>=0.14.2",
]
dev = [
    "pytest>=8.4.2",
    "typer>=0.19.2",
]
